# Matryoshka-ICD

./: README.md  main.py  project_report.md  pyproject.toml  requirements.txt  temp.py  train.sh
ablation_study/: models.py  trainer.py
src/: configs.py  data.py  eval.py  loss.py  models.py  trainer.py  utils.py
src/dataset/: preprocess.py
