[project]
name = "icd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=2.14.4",
    "ipykernel>=6.29.5",
    "jedi>=0.19.2",
    "jupyterlab>=4.3.8",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.4.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "tabulate>=0.9.0",
    "tokenizers>=0.20.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "wandb>=0.23.1",
]
