[project]
name = "icd"
version = "0.1.0"
description = "Automated ICD Coding with Matryoshka Representation Learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "tqdm",
    "transformers",
    "wandb",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyterlab",
]
